[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caskr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "youthx", email = "youthxf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/youthx/caskr#readme"
Issues = "https://github.com/youthx/caskr/issues"
Source = "https://github.com/youthx/caskr"

[tool.hatch.version]
path = "src/caskr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/caskr tests}"

[tool.coverage.run]
source_pkgs = ["caskr", "tests"]
branch = true
parallel = true
omit = [
  "src/caskr/__about__.py",
]

[tool.coverage.paths]
caskr = ["src/caskr", "*/caskr/src/caskr"]
tests = ["tests", "*/caskr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
